deploy/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foundry
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: foundry
